--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,14 @@
 }
 
 body {
+   
+    position: relative;
     background-color: #d9dcd6;
+    resize:""
 }
 
 .header {
+    position: relative;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -33,12 +37,12 @@ body {
 }
 
 .header div ul {
-    list-style-type: none;
+    list-style-type:none
 }
 
 .header div ul li {
     display: inline-block;
-    margin-left: 25px;
+    margin-left: auto;
 }
 
 a {
