--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@viewport {
+    width: device-width;
+    zoom: 1.0;
+}
+ @-ms-viewport {
+     width: device-width;
+ }
+
+
 * {
     box-sizing: border-box;
     padding: 0;
