--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
      width: device-width;
  }
 
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -52,6 +51,7 @@ body {
 .header div ul li {
     display: inline-block;
     margin-left: auto;
+    margin: 10px;
 }
 
 a {
