--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.subheadings {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -44,14 +44,14 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.shortcuts {
     list-style-type:none
 }
 
-.header div ul li {
+.shortcuts li {
     display: inline-block;
     margin-left: auto;
-    margin: 10px;
+   
 }
 
 a {
@@ -94,7 +94,7 @@ p {
     clear: both;
     float: right;
     width: 20%;
-    height: 100%;
+    height: 95%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
