--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
    
     position: relative;
     background-color: #d9dcd6;
-    resize:""
+  
 }
 
 .header {
@@ -57,6 +57,7 @@ body {
 a {
     color: #ffffff;
     text-decoration: none;
+    margin-top: auto;
 }
 
 p {
@@ -82,19 +83,21 @@ p {
     margin-left: 25px;
 }
 
-.content {
+.content  {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    
 }
 
 .benefits {
-    margin-right: 20px;
-    padding: 20px;
+    margin-right: 15px;
+    padding: 10px;
     clear: both;
     float: right;
     width: 20%;
-    height: 95%;
+    height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
@@ -105,19 +108,20 @@ p {
 }
 
 .benefit h3 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
 .benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
     
+    display: block;
+    max-width: 150px;
+    margin: 10px auto;
+
 }
 
 .search-engine-optimization {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -126,7 +130,7 @@ p {
 }
 
 .online-reputation-management {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -135,7 +139,7 @@ p {
 }
 
 .social-media-marketing {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
