--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,6 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 15px;
-  
     
 }
 
@@ -120,7 +119,7 @@ p {
 
 }
 
-.search-engine-optimization {
+.imagedp {
     margin-bottom: 30px;
     padding: 50px;
     height: 300px;
@@ -129,47 +128,11 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 30px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 30px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.imagedp img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.imagedp h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
